Fixed spacing bug on news page.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -204,8 +204,14 @@ div.abstract > iframe {
 
 .newsInfo {
 	font-size:14px;	
-	margin:0 0 0 0;
+	margin: 0 0 0 0;
 	padding: 10px 0 30px 30px;
+}
+
+.extraInfo {
+	font-size:14px;	
+	margin: 0 0 0 0;
+	padding: 10px 0 0px 30px;
 }
 
 .linkHeader {
